Closed Bug 147726 Opened 23 years ago Closed 23 years ago

Painting problem occurs when loading a QT movie directly

Categories

(Camino Graveyard :: Page Layout, defect)

PowerPC
macOS
defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: chrispetersen, Assigned: bnesse)

References

()

Details

Attachments

(1 file)

Build: 0.2.8 Platform: Mac OS X 10.1.4 (QuickTime Plug-in 5.0.2) Expected Results: QT movie should appear and play in browser window. What I got: After plugin appears to be initialized, the window's toolbar is missing. The QT movie appears with a controller bar but is not functional. Steps to reproduce: 1) Open url of QT movie in Chimera 2) Notice problems as described.
->beard
Assignee: saari → beard
*** Bug 148730 has been marked as a duplicate of this bug. ***
Severity: major → blocker
Another Quicktime painting issue - http://mozdev.org/bugs/show_bug.cgi?id=1158.
Chimera/20020619 does nothing when the URL is accessed.
Hmmm. QT Movies don't seem to load directly now. Need to see when this was changed.
I checked on a nightly build from June 11th and wasn't able to load QT movie either.
->bnesse, can you check if we're still loading the movie at all?
Assignee: beard → bnesse
Yes, we are loading movies. I am doing so for testing bug 147902.
This is related to the fact that this movie is audio only, and has no video track. Playing a movie which contains a video track works, more or less, as expected: http://www.apple.com/trailers/paramount/star_trek_nemesis/large.html
I just tried with different QT movie which contains a video track. Movie is open directly instead of embedded in a HTML file. QT movie isn't displayed in window. http://homepage.mac.com/chrispetersen/.Movies/clip4.mov
Still can't access either .mov directly using Chimera/20020701. (Accessing the Star Trek .mov embedded in an HTML page works fine.)
Ah, I see. Ok we probably have an embedded vs. full page plugin issue here.
Attached patch Proposed patchSplinter Review
Patch which fixes drawing issue and carries over other embedded plugin fixes.
Pink? Simon? Same basic patch as the one in bug 147902 except for full page plugins.
Comment on attachment 90107 [details] [diff] [review] Proposed patch r=sfraser
Attachment #90107 - Flags: review+
if there is any way to get this in before monday's build, that would be cool.
played with this, and it looks like it mostly works, but i still once in a while see it draw through tabs. landing anyway.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Hmm. With the July 8th (2002-07-08-13) build, clicking on these QT links now open the save dialog automatically. The movie itself isn't actually displayed in the browser window just gets saved to disk. Not sure how to verify this since the original issue was a painting issue when displaying a QT in full page plugin mode.
With the 2002-07-12-13 trunk NB, QT movies are now loaded and play in browser.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: