Fixing drawing problems with fullpage plugins in cocoa (bug 147726)